1.3.0-alpha.4 - Updated Logo Rendering